avoid cutting off charts in print

--- a/sites/example-project/src/app.css
+++ b/sites/example-project/src/app.css
@@ -308,6 +308,7 @@
 	}
 
 	article {
+		@apply max-w-prose px-8 mx-auto my-5;
 		orphans: 2;
 		widows: 2;
 	}
